--- a/css/me.css
+++ b/css/me.css
@@ -457,3 +457,5 @@
 .navigation ul li:nth-child(5).active ~ .indicator {
   transform: translateX(calc(70px * 4));
 }
+
+/* loaderrrrrrrrrrrrrrrrrrr */
