--- a/css/style.css
+++ b/css/style.css
@@ -494,8 +494,8 @@ button {
   width: 100%;
   float: left;
   font-size: 16px;
-  color: #b6b6b6;
-  background-color: #05141f;
+  color: #ffffff;
+  background-color: #a6307c;
   text-align: center;
   padding: 10px 0px;
   border: 1px solid #05141f;
